# algorithms-and-data-structures

./: .gitignore  CMakeLists.txt  README.md  main.c
adt_&&_ds/: adt.h
adt_&&_ds/clist/: clist.c  clist.h
adt_&&_ds/dlist/: dlist.c  dlist.h
adt_&&_ds/graph/: graph.c  graph.h
adt_&&_ds/hash/: hashtable.c  hashtable.h
adt_&&_ds/heap/: heap.c  heap.h
adt_&&_ds/pq/: pq.c  pq.h
adt_&&_ds/queue/: queue.c  queue.h
adt_&&_ds/slist/: slist.c  slist.h
adt_&&_ds/stack/: stack.c  stack.h
adt_&&_ds/tree/: tree.c  tree.h
algorithms/dp/: dp.c  dp.h
algorithms/graph/: graph_algorithms.h  graph_mst.c  graph_sssp.c  graph_traversal.c
algorithms/recursion/: combinatorics.c  recursion.h  recursion_basics.c
algorithms/sorting/: heapsort.c  mergesort.c  quicksort.c  sorting.h
